src/objects/ProductionOrgs__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Protected custom setting to store details for production orgs</description>
    <fields>
        <fullName>Organization_Name__c</fullName>
        <description>Name of the production org. It&apos;s unique and case insensitive</description>
        <label>Organization Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Password__c</fullName>
        <description>Encrypted password for the service account user</description>
        <label>Password</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Security_Token__c</fullName>
        <description>Encrypted security token for the service account user</description>
        <label>Security Token</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Username__c</fullName>
        <description>Encrypted username for the service account user</description>
        <label>Username</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Production Orgs</label>
</CustomObject>